--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-slate
+title: Most Meaningful Objective Report
+description: This section of the website will house the Most Meaningful Objective Report.
